# gamebox

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: bench.yml  rust.yml  test.yml
benches/: bench.rs
ffi/: Cargo.toml  gamebox.h
macros/: Cargo.toml
macros/src/: lib.rs
python/: Cargo.toml
src/: deserialize.rs  deserializer.rs  lib.rs  node_ref.rs  read.rs  reader.rs  serialize.rs  serializer.rs  write.rs  writer.rs
src/class/: challenge.rs  dyna_object_model.rs  dyna_object_model_instance_params.rs  index_buffer.rs  material.rs  material_custom.rs  mod.rs  prefab.rs  solid2_model.rs  solid_2_model.rs  static_object_model.rs  surface.rs  vertex_stream.rs  visual.rs  visual_3d.rs  visual_indexed.rs  visual_indexed_triangles.rs
src/classes/: block_info_classic.rs  block_info_groups.rs  block_info_tree_root.rs  color_table.rs  ghost.rs  item_model_tree_root.rs  light_user_model.rs  macroblock.rs  material.rs  material_user_inst.rs  prefab.rs  static_object_model.rs  surface.rs  texture.rs  traits_metadata.rs  veget_tree_model.rs  waypoint_special_property.rs  zone_genealogy.rs
src/common/: file_ref.rs  mod.rs  rc.rs  rc_str.rs
src/control/: effect_simi.rs  mod.rs
src/deserialize/: id.rs  mod.rs  node.rs  node_state.rs
src/engines/: mod.rs
src/function/: mod.rs  shader.rs
src/game/: block_item.rs  common_item_entity_model.rs  common_item_entity_model_edition.rs  ghost.rs  item_model.rs  mod.rs  (+6 more)
tests/: PlatformBase.Block.Gbx  PlatformBase.Item.Gbx  Sport.ColorTable.gbx.json  TrackWallClips_D.Texture.gbx  patch_hook_extracted.py  test.rs
(+510 files in other folders)
