[workspace]
members = ["macros"]

[package]
name = "gamebox"
version = "0.1.0"
authors = ["Justin de Ruiter <justinderuiter@ziggo.nl>"]
edition = "2021"
rust-version = "1.80.1"
description = "GameBox file reading and writing"
repository = "https://github.com/jussyDr/gamebox"
license = "GPL-2.0"

[profile.bench]
debug = true

[[bench]]
name = "bench"
harness = false

[dependencies]
gamebox-macros = { path = "macros" }
indexmap = "2.7.0"
lzo1x = "0.2.0"

[dev-dependencies.criterion]
version = "0.5.1"
default-features = false
